[package]
name = "compressor"
version = "0.3.0"
authors = [
    "mitchmindtree <mitchell.nordine@gmail.com>",
    "JoshuaBatty"
]
description = "A high performance digital signal compressor, designed for compressing the amplitude of audio data."
readme = "README.md"
keywords = ["limiter", "dsp", "rms", "peak", "dynamics"]
license = "Apache-2.0/MIT"
repository = "https://github.com/MindBuffer/compressor.git"
homepage = "https://github.com/MindBuffer/compressor"

[features]
default = ["dsp-chain"]

[dependencies]
envelope_detector = "0.2.0"
time_calc = "0.11.0"
dsp-chain = { version = "0.13.0", optional = true }

[dev-dependencies]
portaudio = "0.6.4"
